--- a/charts/templates/app.yaml
+++ b/charts/templates/app.yaml
@@ -6,7 +6,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/onurbilginnn/argo-helm.git
-    targetRevision: master
+    targetRevision: main
     path: ./charts/
     helm:
       values: |
