updated values.yaml image

--- a/charts/templates/app.yaml
+++ b/charts/templates/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: onur-app
+  name: real-app
 spec:
   project: default
   source:
