--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -7,6 +7,8 @@ replicaCount: 1
 image:
   repository: harshal1903/backend-app
   pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: 1.0
 
 imagePullSecrets: []
 nameOverride: ""
