--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: harshal1903/backend-app
+  repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
