--- a/charts/templates/app.yaml
+++ b/charts/templates/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: real-app
+  name: node-food-api
 spec:
   project: default
   source:
@@ -14,6 +14,45 @@ spec:
         service:
           port: 8081
           targetPort: 8081
+    plugin: 
+      env: 
+      - name: PORT
+        value: "3000"
+      # - name: "PORT"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  port
+      #       name: {{ .Release.Name }}-auth
+      # - name: "DB_USER"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  dbUser
+      #       name: {{ .Release.Name }}-auth
+      # - name: "DATABASE_PASSWORD"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  databasePassword
+      #       name: {{ .Release.Name }}-auth
+      # - name: "DB_HOST"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  dbHost
+      #       name: {{ .Release.Name }}-auth
+      # - name: "DB_DATABASE"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  database
+      #       name: {{ .Release.Name }}-auth
+      # - name: "DB_PORT"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  dbPort
+      #       name: {{ .Release.Name }}-auth
+      # - name: "NODE_ENV"
+      #   valueFrom:
+      #     secretKeyRef:
+      #       key:  nodeEnv
+      #       name: {{ .Release.Name }}-auth
   destination:
     server: https://kubernetes.default.svc
     namespace: default
